fix button "about me" on mobile view

--- a/style.css
+++ b/style.css
@@ -177,6 +177,6 @@ p {
 
     a {
         font-size: 0.8rem;
-        margin-left: -5px;
+        margin-left: 3px;
     }
 }
